--- a/WEB_153502_Tolstoi/WEB_153502_Tolstoi.csproj
+++ b/WEB_153502_Tolstoi/WEB_153502_Tolstoi.csproj
@@ -10,4 +10,12 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.16" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Web_153502_Tolstoi.Domain\Web_153502_Tolstoi.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\images\" />
+  </ItemGroup>
+
 </Project>
