--- a/Web_153502_Tolstoi.IdentityServer/Web_153502_Tolstoi.IdentityServer.csproj
+++ b/Web_153502_Tolstoi.IdentityServer/Web_153502_Tolstoi.IdentityServer.csproj
@@ -10,6 +10,8 @@
 
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="6.0.0" />
 
+		<PackageReference Include="Microsoft.AspNetCore.Http.Extensions" Version="2.2.0" />
+
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.23" />
 
 		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.16" />
